raw/piston-image-0.10.3--2016-11-11-11-03-50--4.log
commit ba2e892249d51cce0980e95e0b4daabb7710ad82
Merge: 4da129d 43aed32
Author: bors <bors@rust-lang.org>
Date:   Fri Nov 11 05:55:04 2016 -0800

    Auto merge of #37447 - estebank:non-duplicate-definition-error, r=nrc
    
    Show one error for duplicated type definitions
    
    For the following code:
    
    ``` rustc
    struct Bar;
    struct Bar;
    
    fn main () {
    }
    ```
    
    show
    
    ``` nocode
    error[E0428]: a type named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error: aborting due to previous error
    ```
    
    instead of
    
    ``` nocode
    error[E0428]: a type named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error[E0428]: a value named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error: aborting due to 2 previous errors
    ```
    
    Fixes #35767.
rustc: ./piston-image-0.10.3
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling image v0.10.3 (file:///root/benchmarks/piston-image-0.10.3)
time: 0.038; rss: 54MB	parsing
Lines of code:             12000
Pre-expansion node count:  90152
time: 0.000; rss: 54MB	recursion limit
time: 0.000; rss: 54MB	crate injection
time: 0.000; rss: 54MB	plugin loading
time: 0.000; rss: 54MB	plugin registration
time: 0.064; rss: 93MB	expansion
time: 0.000; rss: 93MB	maybe building test harness
time: 0.001; rss: 93MB	maybe creating a macro crate
Post-expansion node count: 148881
time: 0.000; rss: 93MB	checking for inline asm in case the target doesn't support it
time: 0.003; rss: 93MB	complete gated feature checking
time: 0.005; rss: 93MB	early lint checks
time: 0.001; rss: 93MB	AST validation
time: 0.019; rss: 98MB	name resolution
time: 0.012; rss: 106MB	lowering ast -> hir
time: 0.002; rss: 110MB	indexing hir
time: 0.001; rss: 110MB	attribute checking
time: 0.001; rss: 100MB	language item collection
time: 0.002; rss: 100MB	lifetime resolution
time: 0.000; rss: 100MB	looking for entry point
time: 0.000; rss: 100MB	looking for plugin registrar
time: 0.009; rss: 106MB	region resolution
time: 0.001; rss: 106MB	loop checking
time: 0.001; rss: 106MB	static item recursion checking
time: 0.051; rss: 105MB	compute_incremental_hashes_map
time: 0.000; rss: 105MB	load_dep_graph
time: 0.015; rss: 108MB	type collecting
time: 0.000; rss: 108MB	variance inference
time: 0.014; rss: 110MB	coherence checking
time: 0.065; rss: 111MB	wf checking
time: 0.139; rss: 113MB	item-types checking
time: 0.697; rss: 123MB	item-bodies checking
time: 0.000; rss: 123MB	drop-impl checking
time: 0.049; rss: 128MB	const checking
time: 0.008; rss: 128MB	privacy checking
time: 0.001; rss: 128MB	stability index
time: 0.006; rss: 128MB	intrinsic checking
time: 0.003; rss: 128MB	effect checking
time: 0.013; rss: 128MB	match checking
time: 0.009; rss: 129MB	liveness checking
time: 0.039; rss: 129MB	rvalue checking
time: 0.090; rss: 171MB	MIR dump
  time: 0.011; rss: 171MB	SimplifyCfg
  time: 0.019; rss: 171MB	QualifyAndPromoteConstants
  time: 0.021; rss: 171MB	TypeckMir
  time: 0.001; rss: 171MB	SimplifyBranches
  time: 0.004; rss: 171MB	SimplifyCfg
time: 0.056; rss: 171MB	MIR cleanup and validation
time: 0.106; rss: 171MB	borrow checking
time: 0.003; rss: 171MB	reachability checking
time: 0.007; rss: 171MB	death checking
time: 0.007; rss: 174MB	stability checking
time: 0.000; rss: 174MB	unused lib feature checking
time: 0.062; rss: 174MB	lint checking
time: 0.000; rss: 174MB	resolving dependency formats
  time: 0.001; rss: 174MB	NoLandingPads
  time: 0.005; rss: 174MB	SimplifyCfg
  time: 0.011; rss: 174MB	EraseRegions
  time: 0.002; rss: 174MB	AddCallGuards
  time: 0.041; rss: 178MB	ElaborateDrops
  time: 0.001; rss: 178MB	NoLandingPads
  time: 0.009; rss: 178MB	SimplifyCfg
  time: 0.006; rss: 178MB	InstCombine
  time: 0.002; rss: 178MB	Deaggregator
  time: 0.000; rss: 178MB	CopyPropagation
  time: 0.007; rss: 178MB	SimplifyLocals
  time: 0.002; rss: 178MB	AddCallGuards
  time: 0.000; rss: 178MB	PreTrans
time: 0.086; rss: 178MB	MIR optimisations
  time: 0.015; rss: 181MB	write metadata
  time: 0.393; rss: 193MB	translation item collection
  time: 0.024; rss: 195MB	codegen unit partitioning
  time: 0.021; rss: 318MB	internalize symbols
time: 2.412; rss: 318MB	translation
time: 0.000; rss: 318MB	assert dep graph
time: 0.000; rss: 318MB	serialize dep graph
  time: 0.210; rss: 230MB	llvm function passes [0]
  time: 0.081; rss: 233MB	llvm module passes [0]
  time: 4.236; rss: 231MB	codegen passes [0]
  time: 0.000; rss: 231MB	codegen passes [0]
time: 4.830; rss: 231MB	LLVM passes
time: 0.000; rss: 231MB	serialize work products
time: 0.141; rss: 100MB	linking
done
